# 3SEM

./: README.md
LabTools/: .gitignore  LabTools.cpp  LabTools.h
lab1/: .gitignore
lab1/generator/: generator.cpp
lab1/lab1_relis11/: MatrixList.cpp  SparseMatrix.cpp  SparseMatrix.h  main.cpp
lab1/lab1_relis2/: List.cpp  SparseMatrix.h  main.cpp
lab2/: LineCassini.cpp  LineCassini.h  Menu.cpp  Menu.h  README.txt  lineCassini.h  main.cpp  testing.cpp
lab3/: Menu.cpp  Menu.h  README.txt  Stack.cpp  Stack.h  main.cpp  testing.cpp
lab3c/: CMakeLists.txt  Menu.cpp  Stack.cpp  Stack.h  main.cpp
lab3d/: Dialog.cpp  Dialog.h  main.cpp
lab3d/lib/: Printed_Circuit_Board.cpp  Printed_Circuit_Board.h
lab3d2/: AppView.cpp  AppView.h  main.cpp
lab3d2/logic/: Printed_Circuit_Board.h  logic.cpp  logic.h
lab4/: CMakeLists.txt  main.cpp
lab4/GroupOfShips/: CMakeLists.txt  Target.h
lab4/GroupOfShips/AircraftCarrier/: AircraftCarrier.cpp  AircraftCarrier.h  CMakeLists.txt  testAircraftCarrier.cpp
lab4/GroupOfShips/Destroyer/: CMakeLists.txt  Destroyer.cpp  Destroyer.h  testDestroyer.cpp
lab4/GroupOfShips/GroupOfShips/: CMakeLists.txt  GroupOfShips.cpp  GroupOfShips.h  decreaseHealth.cpp  enemyAiming.cpp  groupAiming.cpp  testGroupOfShips.cpp
lab4/GroupOfShips/Person/: CMakeLists.txt  Person.cpp  Person.h  testPerson.cpp  testingPerson.cpp
lab4/GroupOfShips/Plane/: CMakeLists.txt  Plane.cpp  Plane.h  testPlane.cpp
lab4/GroupOfShips/Ship/: CMakeLists.txt  Ship.cpp  Ship.h  testShip.cpp  testingShip.cpp
lab4/GroupOfShips/TableOfShips/: CMakeLists.txt  TableOfShips.cpp  TableOfShips.h  testTableOfShips.cpp
lab4/GroupOfShips/Weapon/: CMakeLists.txt  Weapon.cpp  Weapon.h  testWeapon.cpp
lab4_app/: CMakeLists.txt
lab4_app/include/: AircraftCarrier.h  Destroyer.h  GameProcess.h  GroupOfShips.h  Initialize.h  Plane.h  PointOnMap.h  Port.h  Ship.h  Weapon.h
lab4_app/src/: GameProcess.cpp  Initialize.cpp  PointOnMap.cpp  Port.cpp  PutInformation.cpp  SelectPoint.cpp  SetCompound.cpp  main.cpp
lab4b/: CMakeLists.txt
lab4b/Templates/Map/: Map.h
lab4b/Templates/Map/test/: CMakeLists.txt  testMap.cpp
lab4b/Templates/Pair/: Pair.h
lab4b/Templates/Pair/test/: CMakeLists.txt  testPair.cpp
lab4b/Templates/Vector/: Vector.h
lab4b/Templates/Vector/test/: CMakeLists.txt  testVector.cpp
